tests/compilefail51.out
[1mtests/compilefail51.pas:9:12: [0m[1m[91merror:[0m Semicolon expected
     9 | 	addone := a;